--- a/.github/workflows/feature_pipeline.yml
+++ b/.github/workflows/feature_pipeline.yml
@@ -1,29 +1,31 @@
-name: Hourly Feature Pipeline
+name: Feature Pipeline (Hourly)
 
 on:
   schedule:
-    - cron: "0 * * * *"   # every hour
+    - cron: '0 * * * *'   # Every hour
   workflow_dispatch:
 
 jobs:
-  run-feature-pipeline:
+  feature-pipeline:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        pip install hopsworks pandas numpy requests
+      - name: Install dependencies
+        run: |
+          pip install pandas requests hopsworks
 
-    - name: Run feature pipeline
-      env:
-        m0Gtiak8ESFhLCN4.GH2AXrrUWpmj7kygOmdLNXBwOVRG5YLVjvVxRT3mz5VF5DrkCqV0CQKrZ7az5UBS: ${{ secrets.m0Gtiak8ESFhLCN4.GH2AXrrUWpmj7kygOmdLNXBwOVRG5YLVjvVxRT3mz5VF5DrkCqV0CQKrZ7az5UBS }}
-      run: |
-        python feature_pipeline/feature_engineering.py
+      - name: Run Feature Pipeline
+        env:
+          HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
+        run: |
+          cd feature_pipeline
+          python fetch_aqi_hourly.py
+          python feature_engineering.py
