--- a/.github/workflows/training_pipeline.yml
+++ b/.github/workflows/training_pipeline.yml
@@ -1,29 +1,30 @@
-name: Daily Training Pipeline
+name: Training Pipeline (Daily)
 
 on:
   schedule:
-    - cron: "0 2 * * *"   # daily at 2 AM
+    - cron: '0 0 * * *'   # Daily at midnight UTC
   workflow_dispatch:
 
 jobs:
-  run-training-pipeline:
+  training-pipeline:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        pip install hopsworks pandas numpy scikit-learn tensorflow joblib
+      - name: Install dependencies
+        run: |
+          pip install pandas numpy scikit-learn tensorflow joblib hopsworks
 
-    - name: Run training pipeline
-      env:
-        m0Gtiak8ESFhLCN4.GH2AXrrUWpmj7kygOmdLNXBwOVRG5YLVjvVxRT3mz5VF5DrkCqV0CQKrZ7az5UBS: ${{ secrets.m0Gtiak8ESFhLCN4.GH2AXrrUWpmj7kygOmdLNXBwOVRG5YLVjvVxRT3mz5VF5DrkCqV0CQKrZ7az5UBS }}
-      run: |
-        python training_pipeline/train_model.py
+      - name: Run Training Pipeline
+        env:
+          HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
+        run: |
+          cd training_pipeline
+          python train_model.py
