--- a/.github/workflows/feature_pipeline.yml
+++ b/.github/workflows/feature_pipeline.yml
@@ -29,10 +29,9 @@ jobs:
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
         run: |
-          cd feature_pipeline
-          # Remove nohup and &, run them sequentially so GitHub waits for completion
-          python fetch_aqi_hourly.py
-          python feature_engineering.py
+          # Run scripts using their relative paths from the root
+          python feature_pipeline/fetch_aqi_hourly.py
+          python feature_pipeline/feature_engineering.py
           
       - name: Confirm workflow started
         run: echo "✅ Feature pipeline triggered. Logs saved in feature_pipeline.log"
